[gd_scene load_steps=2 format=3 uid="uid://crurpbccf10t7"]

[ext_resource type="Script" path="res://main.gd" id="1_ftw2n"]

[node name="main" type="Node2D"]
script = ExtResource("1_ftw2n")

[node name="ResourcesDisplayerContainer" type="CenterContainer" parent="."]
offset_left = 740.0
offset_top = 264.0
offset_right = 780.0
offset_bottom = 304.0

[node name="ResourcesDisplayer" type="HBoxContainer" parent="ResourcesDisplayerContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="ButtonsContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 609.0
offset_top = 652.0
offset_right = 1828.0
offset_bottom = 1036.0

[node name="PlusButton" type="Button" parent="ButtonsContainer"]
layout_mode = 0
offset_left = 486.0
offset_top = 76.0
offset_right = 551.0
offset_bottom = 221.0
theme_override_font_sizes/font_size = 100
text = "+"

[node name="SaveButton" type="Button" parent="ButtonsContainer"]
layout_mode = 0
offset_left = 810.0
offset_top = 21.0
offset_right = 1043.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 100
text = "Save"

[node name="LoadButton" type="Button" parent="ButtonsContainer"]
layout_mode = 0
offset_left = 809.0
offset_top = 197.0
offset_right = 1052.0
offset_bottom = 342.0
theme_override_font_sizes/font_size = 100
text = "Load"

[connection signal="pressed" from="ButtonsContainer/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ButtonsContainer/LoadButton" to="." method="_on_load_button_pressed"]
